<resources>
    <string name="app_name">DebtDiver</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="don_t_have_account_yet_click_here">don\'t have account yet? click here</string>
    <string name="log_in">log in</string>
    <string name="welcome_to_debit_diver">Welcome to Debt Diver</string>
    <string name="required_field">fill out it</string>
    <string name="title_activity_add_debit">AddDebitActivity</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="error_on_server">Error on server</string>
    <string name="invalid">Authentication is invalid. Log in again.</string>
    <string name="verification">We have just sent you verification Email. please confirm your email.</string>
</resources>
